# temporal-security-scanner

./: .gitignore  DEMO.md  ENCRYPTION.md  LICENSE  PLAYBOOK.md  PRESENTATION.md  README.md  SOVEREIGNTY.md  WINDOWS_SETUP.md  demo_runner.py  go.mod  pyproject.toml  security_scan_temporalio.json  setup.ps1
before/: scanner.py
go_comparison/: SDK_COMPARISON.md  activities.go  models.go  workflow.go
go_comparison/starter/: main.go
go_comparison/worker/: main.go
temporal/: __init__.py  activities.py  encryption.py  models.py  starter.py  worker.py  workflows.py
tests/: test_workflow.py
